# MBL_cellsegment

./: LICENSE  README.md  pyproject.toml
models/02_bbmodel_clahe/: model.py  run.py  train.py
models/02_bbmodel_clahe/log/: events.out.tfevents.1725214637.ip-172-31-36-10
models/03_bbmodel_loss_clahe/: predict.py  run.py  train.py
models/04_2dto3dmodel/: model.py  notes.md  predict.py  run.py  train_2d.py
models/05_lsdmodel/: loss.py  model.py  notes.md  predict.py  run.py  train.py
models/06_lsdmodel_scaledmixedloss_2/: create_mask.py  train.py
models/07_2dto3dmodel/: notes.md
models/07_2dto3dmodel/2d/: add_2d_lsds.py  predict.py  run.py  train.py  view_2d_snapshot.py
models/07_2dto3dmodel/to_3d/: loss.py  model.py  run.py  (+3 more)
models/08_lsdmodel_scaledmixed_grow/: predict.py  train.py
models/09_lsdmodel_msegrow_shortlongaffs/: predict.py  run.py  train.py
models/10_lsdmodel_mse_2affs/: train.py
models/11_bbmodel_v2/: predict.py  train.py
models/12_lsdmodel_mse_shortlongaffs_V2/: predict.py  run.py  train.py
models/13_lsdmodel_slg_affs/: predict.py  train.py
models/14_lsdmodel_slgV2_affs/: model.py  predict.py  train.py
models/15_bbmodel_grow/: loss.py  predict.py  run.py  train.py
models/16_bbmodel_GL/: model.py  predict.py  train.py
models/OG_bbmodel/: run.py  scaled_mse.py  train.py
scripts/: blockwise_mutex_watershed.py  bounding_box.py  count_labels.py  czi_to_tif.py  czi_to_zarr.py  daisy_clahe.py  evaluate.py  filter.py  img_to_zarr.py  img_to_zarr_v2.py  mutex_watershed.py  normalize_image.py  threshold_and_relabel.py  watershed.py
